# cori

./: CMakeLists.txt  LICENSE  config.json  main.cpp
cli/: CMakeLists.txt  Option.cpp  Option.h  OptionManager.cpp  OptionManager.h  main  main.cpp
include/: cori.h  test.h
src/: CMakeLists.txt  Config.cpp  Config.h
src/adapters/docker/: ContainerConfig.cpp  ContainerConfig.h  ContainerConfigBuilder.cpp  ContainerConfigBuilder.h  ContainerInstance.cpp  ContainerInstance.h  Docker.cpp  Docker.h  HostConfig.cpp  HostConfig.h  NetworkConfiguration.cpp  NetworkConfiguration.h  NetworkingConfig.cpp  NetworkingConfig.h  PortBinding.cpp  PortBinding.h  PortMapping.cpp  PortMapping.h  State.cpp  State.h  TransportLayerProtocols.cpp  TransportLayerProtocols.h
src/adapters/docker/exceptions/: ContainerAlreadyExistsException.cpp  ContainerAlreadyExistsException.h  ContainerDoesntExistException.cpp  ContainerDoesntExistException.h  DockerException.cpp  DockerException.h  InvalidConfigException.cpp  InvalidConfigException.h  NoSuchImageException.cpp  NoSuchImageException.h
src/adapters/ssh/: Ssh.cpp  Ssh.h
src/adapters/ssh/exceptions/: SshConnectionException.cpp  SshConnectionException.h
src/http/: HttpRequest.cpp  HttpRequest.h  HttpRequestBuilder.cpp  HttpRequestBuilder.h  HttpResponse.cpp  HttpResponse.h  HttpStatus.cpp  HttpStatus.h  RequestMethod.cpp  RequestMethod.h
src/types/: Node.cpp  Node.h  Object.cpp  Object.h  Spawnable.cpp  Spawnable.h  Store.cpp  Store.h  Uploader.cpp  Uploader.h
src/util/: JsonDeserializable.cpp  JsonDeserializable.h  JsonSerializable.cpp  JsonSerializable.h  util.cpp  util.h
